# Agentes_01

./: .dockerignore  .gitignore  .pylintrc  Readme.md  agent.Dockerfile  cccc  comandos_docker.md  docker-compose.yml  pytest.ini  registry-agent.Dockerfile  registry-tool.Dockerfile  reporte.xlsx  requirements.txt  rest.http  run.sh  setup.cfg  setup.py  ssh_key  ssh_key.pub  swarm.Dockerfile  tool_closet.Dockerfile  tool_file_generator.Dockerfile  tool_file_reader.Dockerfile
coreagents/agent/: raci_agent.py
coreagents/agent/helper/: swarm_master_helper.py
coreagents/agent/oai/: accountable_agent.py  consulted_agent.py  (+5 more)
coreagents/config/: llm.py  loader.py
coreagents/embeddings/: milvusdb.py  pineconedb.py
coreagents/factory/: web_factory.py
coreagents/model/: protocol.py  vo.py
coreagents/utils/: datetime_helper.py  http_invoker_helper.py  logging_config.py  protocol_utils.py
frontend/: app.py  streamlit.Dockerfile
registry/: clothes_user_proxy.yaml:Zone.Identifier
registry/agent/: circus_swarm.yaml  circus_user_proxy.yaml  clothes_provider.yaml  clothes_user_proxy.yaml  explainer_agent.yaml  file_assistant.yaml  file_generator.yaml  file_reader.yaml  file_swarm.yaml  file_user_proxy.yaml  joker_agent.yaml  main.py  stylist_planner.yaml  stylist_swarm.yaml
registry/tool/: closet_api.yaml  file_downloader_api.yaml  file_generator_api.yaml  file_reader_api.yaml  main.py
tests/checkconversation/: checkconversation.py  checkconversationmultiple.py
tools/closet_api/: main.py
tools/file_generator_api/: main.py
tools/file_reader_api/: main.py
(+20 files in other folders)
