[metadata]
name = alnova-cards-ai
version = 0.1.0
author = Accenture Spain
description = PoC for running Alnova cards enabled by AI capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://accenture.com/es-es
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.12


[options.package_data]
* = *.txt, *.rst
